<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".activity.QuestionsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/question_for_quiz"
            android:textSize="22sp"
            android:textColor="@color/darkGrey">
    </TextView>

        <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/flag"
                tools:src="@drawable/ic_flag_of_germany">
        </ImageView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_weight="1"
                    android:max="10"
                    android:indeterminate="false"
                    android:minHeight="50dp"
                    android:progress="0">
            </ProgressBar>

            <TextView
                    android:id="@+id/progressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textSize="14sp"
                    tools:text="0/9">
            </TextView>

        </LinearLayout>

        <TextView
                android:id="@+id/optionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                tools:text="Apple">
        </TextView>

        <TextView
                android:id="@+id/optionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                tools:text="Apple">
        </TextView>

        <TextView
                android:id="@+id/optionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                tools:text="Apple">
        </TextView>

        <TextView
                android:id="@+id/optionFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                tools:text="Apple">
        </TextView>

        <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/submit_button_text"
                android:textColor="@android:color/white"
                android:textSize="18sp">
        </Button>

    </LinearLayout>

</ScrollView>